Switch G1 -> CMS.